--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "calendar_events_app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://Natali-khm.github.io/calendar_events",
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.3",
     "@testing-library/jest-dom": "^5.14.1",
@@ -15,6 +16,7 @@
     "@types/react-router-dom": "^5.3.3",
     "antd": "^5.16.2",
     "axios": "^1.6.8",
+    "gh-pages": "^6.1.1",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -28,7 +30,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
